--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -3,12 +3,12 @@
   <li class="breadcrumb-item active">Cadastro</li>
 </ol>
 <div class="container">
-  <form>
+  <form #clienteForm="ngForm" (ngSubmit)="onSubmit()" >
     <div class="row">
       <div class="col-md-6">
         <div class="form-group">
           <label>ID:</label>
-          <input type="text" class="form-control" [ngModel]="cliente.cpf" name="cpf" disabled="true">
+          <input type="text" class="form-control" [ngModel]="cliente.id" name="id" disabled="true">
         </div>
       </div>
       <div class="col-md-6">
@@ -35,7 +35,7 @@
 
     <div class="row">
       <div class="col-md-2">
-        <button type="submit" class="btn btn-success" (click)="clicar()">
+        <button type="submit" class="btn btn-success" >
           <i class="fa-save">Salvar</i>
         </button>
       </div>
