--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -46,9 +46,14 @@
     </div>
 
     <div class="row">
-      <div class="col-md-2">
+      <div class="col-md-3">
         <button type="submit" class="btn btn-success" >
-          <i class="fa-save">Salvar</i>
+          <i class="fa-save"></i>
+          Salvar
+        </button>
+        <button type="button" class="btn btn-danger ml-1" (click)="voltarParaListagemClientes()" >
+          <i class="fa-solid fa-arrow-left-long"></i>
+          Cancelar
         </button>
       </div>
     </div>
