--- a/src/app/clientes/clientes-lista/clientes-lista.component.html
+++ b/src/app/clientes/clientes-lista/clientes-lista.component.html
@@ -5,7 +5,7 @@
 <div class="container">
   <div class="col-md-2">
     <div class="row">
-      <button class="btn btn-warning">
+      <button class="btn btn-warning" (click)="novoCadastro()">
         <i class="fa fa-plus"></i>
         Novo
       </button>
