--- a/src/app/clientes/clientes-form/clientes-form.component.html
+++ b/src/app/clientes/clientes-form/clientes-form.component.html
@@ -1,6 +1,6 @@
 <h1 class="mt-4">Clientes</h1>
 <ol class="breadcrumb mb-4">
-  <li class="breadcrumb-item active">Cadastro</li>
+  <li class="breadcrumb-item active">{{ cliente.id ? 'Edição' : 'Cadastro' }}</li>
 </ol>
 <div class="container">
   <form #clienteForm="ngForm" (ngSubmit)="onSubmit()" >
@@ -26,7 +26,8 @@
       <div class="col-md-6">
         <div class="form-group">
           <label>Data do Cadastro:</label>
-          <input type="text" class="form-control" [ngModel]="cliente.dataCadastro" name="dataCadastro" disabled="true">
+          <input type="text" class="form-control" [ngModel]="cliente.dataCadastro" name="dataCadastro"
+            disabled="true">
         </div>
       </div>
     </div>
@@ -47,9 +48,13 @@
 
     <div class="row">
       <div class="col-md-3">
-        <button type="submit" class="btn btn-success" >
+        <button type="submit" class="btn btn-success" *ngIf="!cliente.id" >
           <i class="fa-save"></i>
           Salvar
+        </button>
+        <button type="submit" class="btn btn-primary" *ngIf="cliente.id" >
+          <i class="fa-save"></i>
+          Atualizar
         </button>
         <button type="button" class="btn btn-danger ml-1" (click)="voltarParaListagemClientes()" >
           <i class="fa-solid fa-arrow-left-long"></i>
