--- a/src/app/clientes/clientes-lista/clientes-lista.component.html
+++ b/src/app/clientes/clientes-lista/clientes-lista.component.html
@@ -3,6 +3,18 @@
   <li class="breadcrumb-item active">Consulta</li>
 </ol>
 <div class="container">
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="alert alert-success" role="alert" *ngIf="mensagemSucesso">
+        {{ mensagemSucesso }}
+      </div>
+      <div class="alert alert-danger" role="alert" *ngIf="mensagemErro">
+        {{ mensagemErro }}
+      </div>
+    </div>
+  </div>
+
   <div class="col-md-2">
     <div class="row">
       <button class="btn btn-warning" (click)="novoCadastro()">
@@ -30,10 +42,37 @@
             <td>{{ cliente.nome }}</td>
             <td>{{ cliente.cpf }}</td>
             <td>{{ cliente.dataCadastro }}</td>
+            <td>
+              <button class="btn btn-primary" routerLink="/clientes-form/{{ cliente.id }}">
+                <i class="fa fa-edit"></i>
+              </button>
+              <button class="btn btn-danger ml-2" data-toggle="modal" data-target="#modalDelecao"
+                (click)="preparaParaDelecao(cliente)">
+                <i class="fa fa-trash"></i>
+              </button>
+            </td>
           </tr>
         </tbody>
       </table>
     </div>
   </div>
+
+  <div id="modalDelecao" class="modal fade" role="dialog">
+    <div class="modal-dialog">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h4>Confirmação</h4>
+        </div>
+        <div class="modal-body" *ngIf="clienteSelecionado">
+          Confirma a exclusão do Cliente <strong> {{ clienteSelecionado.nome }}</strong>?
+        </div>
+        <div class="modal-footer">
+          <button class="btn btn-success" (click)="deletarCliente()" data-dismiss="modal">Confirmar</button>
+          <button class="btn btn-danger" data-dismiss="modal">Cancelar</button>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
