--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -66,7 +66,12 @@
       <div class="col-md-3">
         <button type="submit" class="btn btn-success">
           <i class="fa fa-save"></i>
-          Salvar</button>
+          Salvar
+        </button>
+        <button type="button" class="btn btn-danger ml-1" routerLink="/servico-prestado-listagem" >
+          <i class="fa-solid fa-arrow-left-long"></i>
+          Cancelar
+        </button>
       </div>
     </div>
   </form>
