--- a/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
+++ b/src/app/servico-prestado/servico-prestado-form/servico-prestado-form.component.html
@@ -68,7 +68,7 @@
           <i class="fa fa-save"></i>
           Salvar
         </button>
-        <button type="button" class="btn btn-danger ml-1" routerLink="/servico-prestado-listagem" >
+        <button type="button" class="btn btn-danger ml-1" routerLink="/servicos-prestados" >
           <i class="fa-solid fa-arrow-left-long"></i>
           Cancelar
         </button>
