--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -8,7 +8,7 @@
           Home
         </a>
         <div class="sb-sidenav-menu-heading">Cadastros</div>
-        <a class="nav-link collapsed" routerLink="/clientes-lista" data-toggle="collapse"
+        <a class="nav-link collapsed" routerLink="/clientes" data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false" aria-controls="collapseLayouts">
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
@@ -16,7 +16,7 @@
           <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
         </a>
 
-        <a class="nav-link collapsed" routerLink="/servico-prestado-listagem" data-toggle="collapse"
+        <a class="nav-link collapsed" routerLink="/servicos-prestados" data-toggle="collapse"
           data-target="#collapseLayouts"
           aria-expanded="false" aria-controls="collapseLayouts">
           <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
