--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -15,6 +15,10 @@
                   Login ou senha incorreto.
                 </div>
 
+                <div class="alert alert-sucess" *ngIf="mensagemSucesso">
+                  {{ mensagemSucesso }}
+                </div>
+
                 <form #loginForm="ngForm" (submit)="onSubmit()">
                   <div class="form-group">
                     <label class="small mb-1">Login</label>
@@ -28,7 +32,7 @@
                   </div>
                   <div class="form-group align-items-center justify-content-between mt-4 mb-0">
                     <button type="submit" class="btn btn-primary" *ngIf="!cadastrando">Enviar</button>
-                    <button type="button" class="btn btn-success" *ngIf="cadastrando">Cadastrar</button>
+                    <button type="button" (click)="cadastrar()" class="btn btn-success" *ngIf="cadastrando">Cadastrar</button>
                     <button type="button" (click)="cancelarCadastro()" class="btn btn-danger ml-2" *ngIf="cadastrando">Cancelar</button>
                   </div>
                 </form>
