--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -11,18 +11,18 @@
                 </h3>
               </div>
               <div class="card-body">
-                <div class="alert alert-danger" *ngIf="erroLogin">
-                  Login ou senha incorreto.
+                <div class="alert alert-danger" *ngFor="let e of errors">
+                  {{ e }}
                 </div>
 
-                <div class="alert alert-sucess" *ngIf="mensagemSucesso">
+                <div class="alert alert-success" *ngIf="mensagemSucesso">
                   {{ mensagemSucesso }}
                 </div>
 
                 <form #loginForm="ngForm" (submit)="onSubmit()">
                   <div class="form-group">
                     <label class="small mb-1">Login</label>
-                    <input type="text" name="nomeUsuario" [(ngModel)]="nomeUsuario" class="form-control py-4"
+                    <input type="text" name="username" [(ngModel)]="username" class="form-control py-4"
                     placeholder="Digite o seu login">
                   </div>
                   <div class="form-group">
