--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,53 +1,55 @@
-<div id="layoutAuthentication">
-  <div id="layoutAuthentication_content">
-    <main>
-      <div class="container">
-        <div class="row justify-content-center">
-          <div class="col-lg-5">
-            <div class="card shadow-lg border-0 rounded-lg mt-5">
-              <div class="card-header">
-                <h3 class="text-center font-weight-light my-4">
-                  {{ cadastrando ? 'Cadastra para novo Usuário' : 'Entrar' }}
-                </h3>
-              </div>
-              <div class="card-body">
-                <div class="alert alert-danger" *ngFor="let e of errors">
-                  {{ e }}
+<div class="bg-primary">
+  <div id="layoutAuthentication">
+    <div id="layoutAuthentication_content">
+      <main>
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-5">
+              <div class="card shadow-lg border-0 rounded-lg mt-5">
+                <div class="card-header">
+                  <h3 class="text-center font-weight-light my-4">
+                    {{ cadastrando ? 'Cadastra para novo Usuário' : 'Entrar' }}
+                  </h3>
+                </div>
+                <div class="card-body">
+                  <div class="alert alert-danger" *ngFor="let e of errors">
+                    {{ e }}
+                  </div>
+
+                  <div class="alert alert-success" *ngIf="mensagemSucesso">
+                    {{ mensagemSucesso }}
+                  </div>
+
+                  <form #loginForm="ngForm" (submit)="onSubmit()">
+                    <div class="form-group">
+                      <label class="small mb-1">Login</label>
+                      <input type="text" name="username" [(ngModel)]="username" class="form-control py-4"
+                      placeholder="Digite o seu login" autocomplete="off">
+                    </div>
+                    <div class="form-group">
+                      <label class="small mb-1">Senha</label>
+                      <input type="password" name="senha" [(ngModel)]="senha" class="form-control py-4"
+                      placeholder="Digite o sua senha">
+                    </div>
+                    <div class="form-group align-items-center justify-content-between mt-4 mb-0">
+                      <button type="submit" class="btn btn-primary" *ngIf="!cadastrando">Enviar</button>
+                      <button type="button" (click)="cadastrar()" class="btn btn-success" *ngIf="cadastrando">Cadastrar</button>
+                      <button type="button" (click)="cancelarCadastro()" class="btn btn-danger ml-2" *ngIf="cadastrando">Cancelar</button>
+                    </div>
+                  </form>
                 </div>
 
-                <div class="alert alert-success" *ngIf="mensagemSucesso">
-                  {{ mensagemSucesso }}
+                <div class="card-footer text-center">
+                  <div class="small">
+                    <a href="#" (click)="prepararCadastrar($event)">Não possui usuário? Cadastre-se aqui</a>
+                  </div>
                 </div>
 
-                <form #loginForm="ngForm" (submit)="onSubmit()">
-                  <div class="form-group">
-                    <label class="small mb-1">Login</label>
-                    <input type="text" name="username" [(ngModel)]="username" class="form-control py-4"
-                    placeholder="Digite o seu login">
-                  </div>
-                  <div class="form-group">
-                    <label class="small mb-1">Senha</label>
-                    <input type="password" name="senha" [(ngModel)]="senha" class="form-control py-4"
-                    placeholder="Digite o sua senha">
-                  </div>
-                  <div class="form-group align-items-center justify-content-between mt-4 mb-0">
-                    <button type="submit" class="btn btn-primary" *ngIf="!cadastrando">Enviar</button>
-                    <button type="button" (click)="cadastrar()" class="btn btn-success" *ngIf="cadastrando">Cadastrar</button>
-                    <button type="button" (click)="cancelarCadastro()" class="btn btn-danger ml-2" *ngIf="cadastrando">Cancelar</button>
-                  </div>
-                </form>
               </div>
-
-              <div class="card-footer text-center">
-                <div class="small">
-                  <a href="#" (click)="prepararCadastrar($event)">Não possui usuário? Cadastre-se aqui</a>
-                </div>
-              </div>
-
             </div>
           </div>
         </div>
-      </div>
-    </main>
+      </main>
+    </div>
   </div>
 </div>
