finalização da autenticação com oauth2 e jwt e da aplicação

--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -24,11 +24,19 @@
           <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
         </a>
 
+        <div class="sb-sidenav-menu-heading">Logout</div>
+        <a class="nav-link collapsed" data-toggle="collapse" (click)="logout();" href="#"
+        data-target="#collapseLayouts"
+        aria-expanded="false" aria-controls="collapseLayouts">
+        <div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
+        Sair
+      </a>
+
       </div>
     </div>
     <div class="sb-sidenav-footer">
-      <div class="small">Logged in as:</div>
-      Start Bootstrap
+      <div class="small">Usuário:</div>
+      {{ usuarioLogado }}
     </div>
   </nav>
 </div>
