finalização da autenticação com oauth2 e jwt e da aplicação

--- a/src/app/template/sidebar/sidebar.component.html
+++ b/src/app/template/sidebar/sidebar.component.html
@@ -29,7 +29,7 @@
         data-target="#collapseLayouts"
         aria-expanded="false" aria-controls="collapseLayouts">
         <div class="sb-nav-link-icon"><i class="fas fa-sign-out-alt"></i></div>
-        Sair
+        Dar o fora
       </a>
 
       </div>
